Remove catalog concept, because it seems unnecessary in the current phase
